--- a/arch/arm/boot/dts/imx6qdl-phytec-mira-peb-eval-01.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-phytec-mira-peb-eval-01.dtsi
@@ -10,8 +10,6 @@
  * http://www.gnu.org/copyleft/gpl.html
  */
 
-#include <dt-bindings/input/input.h>
-
 / {
 	gpio-keys {
 		compatible = "gpio-key";
@@ -22,13 +20,13 @@
 		home {
 			label = "Home";
 			gpios = <&gpio6 18 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_HOME>;
+			linux,code = <102>; /* KEY_HOME */
 		};
 
 		power {
 			label = "Power Button";
 			gpios = <&gpio5 28 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_POWER>;
+			linux,code = <116>; /* KEY_POWER */
 			gpio-key,wakeup;
 		};
 	};
