--- a/arch/arm/boot/dts/imx6qdl-phytec-mira.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-phytec-mira.dtsi
@@ -103,7 +103,7 @@
 			pinctrl-names = "default";
 			pinctrl-0 = <&pinctrl_flexcan1_en>;
 			compatible = "regulator-fixed";
-			reg = <2>;
+			reg = <3>;
 			regulator-name = "flexcan1-reg";
 			regulator-min-microvolt = <1500000>;
 			regulator-max-microvolt = <1500000>;
@@ -134,79 +134,12 @@
 			regulator-always-on;
 		};
 	};
-
-	phytec_mediabus: phytec_mediabus {
-		compatible = "phytec,media-bus";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_cam0data
-				&pinctrl_cam0clk
-				&pinctrl_cam0switch>;
-
-		#gpio-cells = <3>;
-		#clock-cells = <1>;
-
-		phytec,cam0_data_en-gpio = <&gpio5 20 GPIO_ACTIVE_LOW>;
-		phytec,cam0_npwrdn-gpio  = <&gpio5 27 GPIO_ACTIVE_LOW>;
-
-		phytec,cam0_serial;
-
-		assigned-clocks =
-		<&clks IMX6QDL_CLK_CKO1_SEL>,
-		<&clks IMX6QDL_CLK_CKO>,
-		<&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>;
-
-		assigned-clock-parents =
-		<&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
-		<&clks IMX6QDL_CLK_CKO1>;
-
-		assigned-clock-rates = <0>, <0>, <216000000>;
-
-		clocks = <&clks IMX6QDL_CLK_CKO1>;
-		clock-names = "camera0-clk";
-
-		clock-output-names = "camera0-clk";
-
-		color_shifter: sensor@0 {
-			compatible = "phytec,color-shifter";
-
-			phytec,shift = <2>;
-
-			ports {
-				#address-cells = <1>;
-				#size-cells = <0>;
-
-				port@0 {
-					reg = <0>;
-					cshift0_sink_ep0: endpoint {
-						phytec,role = "sink";
-						/* MEDIA_BUS_FMT_SGRBG12_1X12 */
-						phytec,default-mbus-code = <0x2001>;
-						remote-endpoint = <&mt9v024m_ep>;
-					};
-				};
-
-				port@1 {
-					reg = <1>;
-					cshift0_source_ep1: endpoint {
-						phytec,role = "source";
-					};
-				};
-			};
-		};
-	};
 };
 
-&can1 {
+&flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
 	xceiver-supply = <&reg_flexcan1>;
-	status = "disabled";
-};
-
-&hdmi {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_hdmicec>;
-	dc-i2c-bus = <&i2c2>;
 	status = "disabled";
 };
 
@@ -241,8 +174,6 @@
 		compatible = "aptina,mt9v024m";
 		reg = <0x48>;
 		status = "disabled";
-
-		clocks = <&phytec_mediabus 0>;
 
 		port {
 			mt9v024m_ep: endpoint {
@@ -418,17 +349,6 @@
 				MX6QDL_PAD_EIM_BCLK__GPIO6_IO31		0x80000000 /* CD */
 			>;
 		};
-	};
-};
-
-&ipu1_csi0 {
-	#address-cells = <1>;
-	#size-cells = <0>;
-
-	/* Parallel bus */
-	csi0_ep: endpoint {
-		bus-width = <8>;
-		remote-endpoint = <&cshift0_source_ep1>;
 	};
 };
 
