ARM: dts: miraq: add hdmi
Signed-off-by: Matthias Rabe <matthias.rabe@sigma-chemnitz.de>

--- a/arch/arm/boot/dts/imx6q-phytec-mira-rdk-nand.dts
+++ b/arch/arm/boot/dts/imx6q-phytec-mira-rdk-nand.dts
@@ -29,6 +29,15 @@
 	chosen {
 		linux,stdout-path = &uart2;
 	};
+
+	mxcfb1: fb@0 {
+		disp_dev = "hdmi";
+		interface_pix_fmt = "RGB24";
+		default_bpp = <16>;
+		int_clk = <0>;
+		late_init = <0>;
+		status = "okay";
+	};
 };
 
 &flexcan1 {
@@ -47,15 +56,23 @@
 	status = "okay";
 };
 
-/* &hdmi {
-	status = "okay";
-};*/
-
-&i2c1 {
+&hdmi_core {
 	status = "okay";
 };
 
-&i2c2 {
+&hdmi_video {
+	status = "okay";
+};
+
+&hdmi_audio {
+	status = "okay";
+};
+
+&hdmi_cec {
+	status = "okay";
+};
+
+&i2c1 {
 	status = "okay";
 };
 
