--- a/arch/arm/boot/dts/imx6q-phytec-mira-rdk-emmc.dts
+++ b/arch/arm/boot/dts/imx6q-phytec-mira-rdk-emmc.dts
@@ -24,6 +24,15 @@
 	chosen {
 		linux,stdout-path = &uart2;
 	};
+
+	mxcfb1: fb@0 {
+		disp_dev = "hdmi";
+		interface_pix_fmt = "RGB24";
+		default_bpp = <16>;
+		int_clk = <0>;
+		late_init = <0>;
+		status = "okay";
+	};
 };
 
 &flexcan1 {
@@ -38,15 +47,23 @@
 	status = "okay";
 };
 
-&hdmi {
+&hdmi_core {
+	status = "okay";
+};
+
+&hdmi_video {
+	status = "okay";
+};
+
+&hdmi_audio {
+	status = "okay";
+};
+
+&hdmi_cec {
 	status = "okay";
 };
 
 &i2c1 {
-	status = "okay";
-};
-
-&i2c2 {
 	status = "okay";
 };
 
