--- a/arch/arm/boot/dts/imx6qdl-phytec-mira.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-phytec-mira.dtsi
@@ -17,6 +17,18 @@
 
 	aliases {
 		rtc0 = &i2c_rtc;
+		mxcfb0 = &mxcfb1;
+	};
+
+	mxcfb1: fb@0 {
+		reg = <0 0>;
+		compatible = "fsl,mxc_sdc_fb";
+		disp_dev = "hdmi";
+		interface_pix_fmt = "RGB24";
+		default_bpp = <16>;
+		int_clk = <0>;
+		late_init = <0>;
+		status = "okay";
 	};
 
 	backlight: backlight {
@@ -143,6 +155,35 @@
 	status = "disabled";
 };
 
+&hdmi_core {
+	ipu_id = <0>;
+	disp_id = <0>;
+
+	status = "disabled";
+};
+
+&hdmi_video {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_hdmi_ddc>;
+
+	fsl,phy_reg_vlev = <0x294>; /* TODO check */
+	fsl,phy_reg_cksymtx = <0x800d>;
+	fsl,hdcp;
+
+	status = "disabled";
+};
+
+&hdmi_audio {
+	status = "disabled";
+};
+
+&hdmi_cec {
+        pinctrl-names = "default";
+        pinctrl-0 = <&pinctrl_hdmi_cec>;
+
+	status = "disabled";
+};
+
 &i2c1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
@@ -205,13 +246,6 @@
 	};
 };
 
-&i2c2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_i2c2>;
-	clock-frequency = <100000>;
-	status = "disabled";
-};
-
 &iomuxc {
 	imx6qdl-phytec-phyboard-mira {
 		pinctrl_cam0data: cam0datagrp {
@@ -268,7 +302,14 @@
 			>;
 		};
 
-		pinctrl_hdmicec: hdmicecgrp {
+		pinctrl_hdmi_ddc: hdmiddcgrp {
+			fsl,pins = <
+                                MX6QDL_PAD_KEY_COL3__HDMI_TX_DDC_SCL 0x4001b8b1
+                                MX6QDL_PAD_KEY_ROW3__HDMI_TX_DDC_SDA 0x4001b8b1
+			>;
+		};
+
+		pinctrl_hdmi_cec: hdmicecgrp {
 			fsl,pins = <
 				MX6QDL_PAD_KEY_ROW2__HDMI_TX_CEC_LINE	0x1f8b0
 			>;
