--- a/arch/arm/boot/dts/imx6qdl-phytec-phycore-som.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-phytec-phycore-som.dtsi
@@ -333,6 +333,7 @@
 	pinctrl-0 = <&pinctrl_usdhc4>;
 	bus-width = <8>;
 	non-removable;
+	fsl,fbclk-sel = <0>;
 	vmmc-supply = <&vdd_emmc_1p8>;
 	status = "disabled";
 };
