--- a/arch/arm64/boot/dts/freescale/overlays/Makefile
+++ b/arch/arm64/boot/dts/freescale/overlays/Makefile
@@ -22,6 +22,10 @@ dtb-y += imx8mp-isi-csi1.dtbo
 dtb-y += imx8mp-isi-csi2.dtbo
 dtb-y += imx8mp-isp-csi1.dtbo
 dtb-y += imx8mp-isp-csi2.dtbo
+dtb-y += imx8mp-vm016-csi1.dtbo
+dtb-y += imx8mp-vm016-csi2.dtbo
+dtb-y += imx8mp-vm016-csi1-fpdlink.dtbo
+dtb-y += imx8mp-vm016-csi2-fpdlink.dtbo
 dtb-y += imx8mp-vm017-csi1.dtbo
 dtb-y += imx8mp-vm017-csi2.dtbo
 dtb-y += imx8mp-vm017-csi1-fpdlink.dtbo
